Added ImageSprite and refactored Sprite

--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Engine.Designer.cs">
       <DependentUpon>Engine.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImageSprite.cs" />
     <Compile Include="Program.cs">
       <SubType>Form</SubType>
     </Compile>
