--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -89,6 +89,9 @@
   <ItemGroup>
     <None Include="Resources\at.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Empty.bmp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
