--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actor.cs" />
     <Compile Include="Creature.cs" />
     <Compile Include="Engine.cs">
       <SubType>Form</SubType>
