--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -89,7 +89,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\Player.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Corridor.Png" />
   </ItemGroup>
@@ -98,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Floor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Stair.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
