--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="ImageSprite.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs">
       <SubType>Form</SubType>
     </Compile>
