--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Actor.cs" />
     <Compile Include="Creature.cs" />
+    <Compile Include="Dungeon.cs" />
     <Compile Include="Engine.cs">
       <SubType>Form</SubType>
     </Compile>
