--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -115,6 +115,9 @@
   <ItemGroup>
     <None Include="Resources\Weap.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Fireball.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
