--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Engine\Program.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Misc\ScreenOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="GameClasses\Tile.cs" />
