--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -69,6 +69,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Misc\ScreenOutput.cs" />
+    <Compile Include="Misc\Sidebar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="GameClasses\Tile.cs" />
