--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="GameClasses\Tile.cs" />
-    <Compile Include="Misc\World.cs" />
+    <Compile Include="Engine\World.cs" />
     <EmbeddedResource Include="Engine\Engine.resx">
       <DependentUpon>Engine.cs</DependentUpon>
     </EmbeddedResource>
