--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -131,6 +131,7 @@
     <Content Include="Resources\Effects\Flame.png" />
     <None Include="Resources\Items\Sword.png" />
     <None Include="Resources\Items\Shirt.png" />
+    <None Include="Resources\Items\FBOrb.png" />
     <Content Include="Resources\Tiles\Corridor.png" />
     <Content Include="Resources\Tiles\Door.png" />
     <None Include="Resources\Tiles\Wall.png" />
