--- a/GridRL/GridRL.csproj
+++ b/GridRL/GridRL.csproj
@@ -132,6 +132,7 @@
     <None Include="Resources\Items\Sword.png" />
     <None Include="Resources\Items\Shirt.png" />
     <None Include="Resources\Items\FBOrb.png" />
+    <None Include="Resources\StartMenu.jpg" />
     <Content Include="Resources\Tiles\Corridor.png" />
     <Content Include="Resources\Tiles\Door.png" />
     <None Include="Resources\Tiles\Wall.png" />
